@@ -3,12 +3,8 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LocaleDyn.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LooseDyn.java</file>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/cfg/parameters.json</file>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/ctrl/Parameters.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/ctrl/Batch.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/view/ObsMP.java</file>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Loose.java</file>
         </group>
     </open-files>
