@@ -101,8 +101,35 @@ public class Parameters {
   public static Parameters readOneOfYou(String json) {
     com.owlike.genson.Genson g = new com.owlike.genson.Genson();
     Parameters p = g.deserialize(json, Parameters.class);
+    if (p == null || !p.test()) System.out.println("Parameter file has missing values.");
     return p;
   }
+  
+  private boolean test(String name, Map<String,Number> ref, Map<String,Number> map) {
+    java.util.Optional<Map.Entry<String, Number>> broken = ref.entrySet().stream().filter(me -> map.get(me.getKey()) == null).findAny();
+    if (broken.isPresent())
+      tut.ctrl.Batch.log(name+"."+broken.get().getKey()+" not found in parameter file.");
+    return broken.isPresent();
+  }
+  private boolean testNet(String key, Map<String,Map<Edge,Double>> map) {
+    boolean retVal = false;
+    if (map.isEmpty() || !map.containsKey(key)) {
+      retVal = true;
+      tut.ctrl.Batch.log(key+" map of Edges -> Doubles is absent.");
+    }
+    return retVal;
+  }
+  private boolean test() {
+    boolean retVal = true;
+    Parameters testP = new Parameters();
+    if (test("batch", testP.batch, batch)) retVal = false;
+    if (test("tight", testP.tight, tight)) retVal = false;
+    if (test("loose", testP.loose, loose)) retVal = false;
+    if (test("looseDyn", testP.looseDyn, looseDyn)) retVal = false;
+    if (testNet("Drug", lRates) || testNet("MP", ldRates)) retVal = false;
+    return retVal;
+  }
+
   
   public static void main(String[] args) throws java.io.FileNotFoundException {
     java.io.File f = new java.io.File(args[0]);
